  . Fixed bug #79778 (Assertion failure if dumping closure with unresolved
    static variable). (Nikita)
  . Fixed bug #79779 (Assertion failure when assigning property of string
    offset by reference). (Nikita)
  . Fixed bug #79792 (HT iterators not removed if empty array is destroyed).
    (Nikita)
  . Fixed bug #78598 (Changing array during undef index RW error segfaults).
    (Nikita)

- Fileinfo:
  . Fixed bug #79756 (finfo_file crash (FILEINFO_MIME)). (cmb)

- FTP:
  . Fixed bug #55857 (ftp_size on large files). (cmb)

- Reflection:
  . Fixed bug #79487 (::getStaticProperties() ignores property modifications).
    (cmb, Nikita)
  . Fixed bug #69804 ()::getStaticPropertyValue() throws on protected props).
    (cmb, Nikita)

- Standard:
  . Fixed bug #70362 (Can't copy() large 'data://' with open_basedir). (cmb)

?? ??? 2020, PHP 7.4.8

- Core:
  . Fixed bug #79649 (Altering disable_functions from module init corrupts
    memory). (Laruence)
  . Fixed bug #79595 (zend_init_fpu() alters FPU precision). (cmb, Nikita)
  . Fixed bug #79650 (php-win.exe 100% cpu lockup). (cmb)
  . Fixed bug #79668 (get_defined_functions(true) may miss functions). (cmb,
    Nikita)
  . Fixed bug #79657 ("yield from" hangs when invalid value encountered).
    (Nikita)
  . Fixed bug #79683 (Fake reflection scope affects __toString()). (Nikita)
  . Fixed possibly unsupported timercmp() usage. (cmb)

- Exif:
  . Fixed bug #79687 (Sony picture - PHP Warning - Make, Model, MakerNotes). 
    (cmb)

- Fileinfo:
  . Fixed bug #79681 (mime_content_type/finfo returning incorrect mimetype).
    (cmb)

- Filter:
  . Fixed bug #73527 (Invalid memory access in php_filter_strip). (cmb)

- GD:
  . Fixed bug #79676 (imagescale adds black border with IMG_BICUBIC). (cmb)

- OpenSSL:
  . Fixed bug #62890 (default_socket_timeout=-1 causes connection to timeout).
    (cmb)

- PDO SQLite:
  . Fixed bug #79664 (PDOStatement::getColumnMeta fails on empty result set).
    (cmb)

- phpdbg: